Routing yapılanması ayarlandı

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 
-<app-layout></app-layout>
+<a routerLinks="">Home</a>| <a routerLinks="products">Products</a>| <a routerLinks="Basket">Basket</a> |<a routerLinks="admin">Admin</a>
+<br>
+<router-outlet></router-outlet>
+
